# mini-aegaeon

./: .gitignore  .gitmodules  README.md  cuda_api_sum.csv  kern_sum.csv  pyproject.toml
aegaeon/: __init__.py  __main__.py  config.py  main.py  types.py
aegaeon/backend/: __init__.py  base.py  mini_sgl.py  mini_sgl_multi.py
aegaeon/memory/: __init__.py  kv_slab.py  model_cache.py  model_cache_manager.py  vram_manager.py  weight.py  weight_manager.py
aegaeon/offline/: __init__.py  offline_aegaeon.py
aegaeon/proxy/: __init__.py  http_server.py  metadata_store.py  posix_shm_store.py  proxy.py  redis_store.py  router.py  service.py
aegaeon/runtime/: __init__.py  instance.py  run_batch.py  topology.py
aegaeon/scheduling/: __init__.py  base.py  colocated.py  decode.py  prefill.py  run_batch.py
aegaeon/server/: __init__.py  http_server.py  launch.py
aegaeon/utils/: __init__.py  nsight.py
benchmark/: __init__.py  benchmark_asym_compute.py  benchmark_core.py  benchmark_minisglang_offload.py  generate_request_trace.py  measure_minisgl_init_time.py  offline_qwen3_colocation.py  plot_ttft_tbt_compare.py  predownload_models.py  run_13b_mig_comparison.py  run_mig_vs_aegaeon_part.sh  trace_generator.py
benchmark/results/: nsys_qwen3_local.sqlite
tests/: offline_mini_sgl_contract_dummy.py
