[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-aegaeon"
version = "0.1.0"
description = "A minimal implementation of Aegaeon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.4.1",
    "numpy>=2.2.6",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegaeon*"]
