[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-aegaeon"
version = "0.1.0"
description = "A minimal implementation of Aegaeon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.34.0,<1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "safetensors>=0.4.5",
    "tqdm>=4.66.0",
    "torch==2.9.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aegaeon*"]

# ---- uv: force torch to resolve from the PyTorch CUDA 12.8 wheel index ----
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
